# GmodDotNet

./: .gitignore  .gitmodules  .travis.yml  BuildInst.txt  CODE_OF_CONDUCT.md  LICENSE  NOTICE  README.md  SECURITY.md  api.version.json  global.json  nuget.config  run_gmod_windows.sh  runtime.csproj  runtime.version.json  test_checker.sh  version.json
.config/: dotnet-tools.json
.github/ISSUE_TEMPLATE/: bug_report.md  docs_question.md  feature_request.md
.github/workflows/: azure-static-web-apps-ambitious-hill-0f19b7c03.yml  azure-static-web-apps-nightly-docs.yml  ci.yml  codeql-analysis.yml  deploy-production-docs-to-zure.yml  rebase-pr-workflow.yml
Gmod.NET/: Gmod.NET.sln
Gmod.NET/Gmod.NET/: Gmod.NET.csproj  GmodNET.cs  Lua.cs  Vector.cs
Gmod.NET/Gmod.NET/Properties/: AssemblyInfo.cs
MetaInfo/NuGetReadme/: README.md
NativeModule/: NativeModule.sln
NativeModule/NativeModule/: NativeModule.vcxproj  NativeModule.vcxproj.filters  main.cpp
csx/: discord-webhook.csx
csx/.config/: dotnet-tools.json
docfx_project/: README.md  docfx.json  global-metadata.json  index.md  toc.yml
docfx_project/api-fusion/: index.md  toc.yml
docfx_project/articles/: toc.yml
docfx_project/articles/overview/: overview.md  toc.yml
docfx_project/articles/overview/core_concepts/: core_concepts.md
docfx_project/articles/runtime_features/: overview.md  toc.yml
docfx_project/articles/runtime_features/development_environment/: index.md
docfx_project/articles/tutorials/: overview.md  toc.yml
docfx_project/articles/tutorials/connect-nightly/: index.md
docfx_project/articles/tutorials/debugging/: index.md
docfx_project/articles/tutorials/hello-world/: hello-world.md  index.md
docfx_project/articles/tutorials/hello-world-detailed/: index.md  overview.md
docfx_project/articles/tutorials/net-sdk-cli/: index.md
docfx_project/lua-api/: dotnet.md  toc.yml
docfx_project/templates/material/styles/: main.css
gm_dotnet_managed/: Global_Types_And_Enums.cs  Gmod.NET.csproj  Gmod.NET.sln  Gmod.cs  GmodDotNet.sln  IModule.cs  Lua.cs  LuaStack.cs  Util.cs  Version.cs  gm_dotnet_managed.sln
gm_dotnet_managed/DefaultContextResolver/: DefaultContextResolver.cs  DefaultContextResolver.csproj
gm_dotnet_managed/GmodDotNet/: GmodDotNet.cs  GmodDotNet.csproj
gm_dotnet_managed/GmodDotNet/Properties/PublishProfiles/: FolderProfile.pubxml
gm_dotnet_managed/GmodNET/: BuidReq.cs  EnvironmentChecks.cs  GameConsoleWriter.cs  GloabalContext.cs  GmodNET.csproj  GmodNetModuleAssemblyLoadContext.cs  Lua.cs  LuaExtensions.cs  LuaInterop.cs  ManagedFunctionMetaMethods.cs  ModuleAssemblyLoadContext.cs  RuntimeServices.cs  Startup.cs  VersionInfo.cs
gm_dotnet_managed/GmodNET.API/: GmodInterop.cs  GmodNET.API.csproj  GmodNET.API.props  GmodNET.API.targets  ILua.cs  IModule.cs  InteropMethods.cs  ModuleAssemblyLoadContext.cs
gm_dotnet_managed/GmodNET/Helpers/: GameConsoleWriter.cs
gm_dotnet_managed/GmodNET/SourceSDK/: Tier0.cs
gm_dotnet_managed/Properties/: AssemblyInfo.cs
gm_dotnet_managed/Tests/: AspNetCoreTest.cs  CheckType.cs  ConsoleTest.cs  CreateMetaTable.cs  CreateMetaTableTest.cs  CreateTable.cs  CustomNativeLoadProcessA.cs  CustomNativeLoadProcessB.cs  EqualityTest.cs  FailingTest.cs  FailingTest2.cs  FifthPushManagedClosureTest.cs  FirstPushManagedClosureTest.cs  FirstPushManagedFunctionTest.cs  FourthPushManagedClosureTest.cs  GetCFunctionTest.cs  GetMetaTableTest.cs  GetTableAndRawGet.cs  GetTypeNameEnum.cs  GetUserTypeOnTypeMismatch.cs  HookPushManagedFunctionTest.cs  ITest.cs  InsertTest.cs  IsTypeEnum.cs  MCallTest.cs  MetaMethodsPushManagedFunctionTest.cs  NativeDependencies.cs  NextTest.cs  NullReferenceTest.cs  ObjLenTest.cs  PCallTest.cs  PCallTest_NoError.cs  PopTopTest.cs  PushAngle.cs  PushBool.cs  PushCClosureTest.cs  PushCFuncPtr.cs  PushCFunction.cs  PushCFunctionIntPtr.cs  PushCFunctionUnsafe.cs  (+22 more)
gm_dotnet_native/: .clang-format  CMakeLists.txt  CMakeSettings.json
gm_dotnet_native/dotnethelper-src/: LuaAPIExposure.cpp  LuaAPIExposure.h  cleanup_function_type.h  dotnethelper.cpp  hostfxr_interop.cpp  hostfxr_interop.h  hostfxr_interop_p.h  hostfxr_loader.h
gm_dotnet_native/external_includes/GarrysMod/Lua/: LuaBase.h
gm_dotnet_native/external_includes/netcore/: hostfxr.h
gm_dotnet_native/includes/: PUT_MONO_AND_GARYS_MOD_HEADERS_HERE
gm_dotnet_native/linux-helper-src/: segv_signal_handler.cpp  segv_signal_handler.h
gm_dotnet_native/src/: LuaAPIExposure.cpp  LuaAPIExposure.h  gm_dotnet.cpp  gprint.cpp  gprint.h  version.h
gm_dotnet_native/utils/: path.cpp  path.h
lua/: gmodnet_shared.lua
lua/Tests/: run_tests.lua
lua/autorun/clientside/: gm_dotnet_client.lua
lua/autorun/serverside/: gm_dotnet_server.lua
node/: discord-linux-fail.js  discord-linux-success.js  discord-windows-fail.js  discord-windows-success.js  discord.js  github-discord.js  package-lock.json  package.json
